# BikeShareAI

./: .env  .gitignore  Project_overview.ipynb  README.md  Workbench.ipynb  create_bike_table.sql  outbench_20230528.ipynb  outbench_20230604.ipynb  pyproject.toml  test.py
archive/: etl.py
archive/sub_benches/: outbench_20230521.ipynb  outbench_20230528.ipynb  outbench_20230530.ipynb
bikeshareai/: __init__.py  bluebikes.py
bikeshareai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bikeshareai/core/: bluebikes.py  folium_bikes.py
dags/: dash_viz.py
data/: current_bluebikes_stations.csv  neighbourhood_stations.csv
data/__MACOSX/: ._202304-bluebikes-tripdata.csv
designs/: dashboard_20230528.txt  folium_design.py
notebooks/: Workbench.ipynb
